[package]
name = "continew"
version = "0.1.0"
authors = ["unopatient <pashayablockov@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dioxus = { version = "0.5.2", features = ["desktop", "router"], git = "https://github.com/DioxusLabs/dioxus.git" }
serde = "1.0.203"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
